--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <script src="https://tarteaucitron.io/load.js?domain=kagadat.github.io%2Fgsmweb-artisan&uuid=407a434a8bedebe4e346c3055009ea0c3e9b1c7c"></script>
-    <!--script
-    type="text/javascript"
-    src="https://app.termly.io/resource-blocker/c8f3c42a-22d3-4584-8c4e-706fb2cb25a5?autoBlock=on"
-    ></script>-->
-        <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
+<!-- Cookies Axeptio -->    
+    <script>
+        window.axeptioSettings = {
+          clientId: "6772ec357f547ee756b6c6ef",
+          cookiesVersion: "gsmweb-artisan-fr-EU",
+          googleConsentMode: {
+            default: {
+              analytics_storage: "denied",
+              ad_storage: "denied",
+              ad_user_data: "denied",
+              ad_personalization: "denied",
+              wait_for_update: 500
+            }
+          }
+        };
+         
+        (function(d, s) {
+          var t = d.getElementsByTagName(s)[0], e = d.createElement(s);
+          e.async = true; e.src = "//static.axept.io/sdk.js";
+          t.parentNode.insertBefore(e, t);
+        })(document, "script");
+        </script>
+<!-- Cookies Axeptio -->
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
